--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ dev.tfvars
 **/.$computeprofile1.drawio.dtmp
 **/.$hcx-options.drawio.bkp
 **/.$hcx-options2.drawio.bkp
+.github/workflows/clone.yml
