--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -34,4 +34,4 @@ jobs:
           git remote set-url ilijarepo https://ElWizardo:${{ secrets.WORKFLOW_TOKEN }}@github.com/ElWizardo/clonerepo.git
           git remote -v
           echo "PUSHING REPO"
-          git push ilijarepo main --rebase
+          git merge ilijarepo main
