--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -1,7 +1,6 @@
 name: Clone Public Repository Workflow
 
 on:
-  push:
   schedule:
     - cron: '0 3 * * *'
   workflow_dispatch:
@@ -34,4 +33,4 @@ jobs:
           git remote set-url ilijarepo https://ElWizardo:${{ secrets.WORKFLOW_TOKEN }}@github.com/ElWizardo/clonerepo.git
           git remote -v
           echo "PUSHING REPO"
-          git merge ilijarepo main
+          git push ilijarepo main:clone
