--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -33,4 +33,4 @@ jobs:
           git remote set-url ilijarepo https://ElWizardo:${{ secrets.WORKFLOW_TOKEN }}@github.com/ElWizardo/clonerepo.git
           git remote -v
           echo "PUSHING REPO"
-          git push ilijarepo main:clone
+          git push -f ilijarepo main:clone
